--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,17 +1,9 @@
-/*!
-
- =========================================================
- * Awesome Landing Page - v1.2.2
- =========================================================
- 
- * Product Page: https://www.creative-tim.com/product/awesome-landing-page
- * Copyright 2017 Creative Tim (http://www.creative-tim.com)
- * Licensed under MIT (https://github.com/creativetimofficial/awesome-landing-page/blob/master/LICENSE.md)
- 
- =========================================================
- 
- * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
- */
+/*
+  Author: Rezwana Sultana Nitu
+  Author Email: rezwananitu88@gmail.com;
+  Author Contact Number: +8801733965395;
+  Author Github Profile: https://github.com/RezwanaNitu;
+*/
 
 /*           Font Smoothing      */
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6, p, .navbar, .brand, .btn-simple, a, .td-name, td {
@@ -65,10 +57,10 @@ body {
 }
 
 a {
-  color: #2ca8ff;
+  color: #fff;
 }
 a:hover, a:focus {
-  color: #109cff;
+  color: #fff;
   text-decoration: none;
 }
 
@@ -76,6 +68,12 @@ a:focus, a:active {
   outline: 0;
 }
 
+
+.facebook:hover { color: #3b5998 !important; }
+.instagram:hover {  color: #bc2a8d !important; }
+.pinterest:hover { color: #cb2027 !important; }
+
+/*navbar CSS*/
 .navbar {
   -webkit-transition: all 300ms linear;
   -moz-transition: all 300ms linear;
@@ -97,6 +95,7 @@ a:focus, a:active {
   text-align: center;
 }
 
+/* Button CSS */
 .btn {
   border-width: 2px;
   background-color: transparent;
@@ -430,6 +429,7 @@ a:focus, a:active {
   background-color: #FFFFFF;
 }
 
+/* Custom Navbar CSS */
 .navbar {
   border: 0;
   font-size: 16px;
@@ -540,7 +540,7 @@ a:focus, a:active {
 .navbar-transparent .dropdown-menu .divider {
   background-color: rgba(255, 255, 255, 0.2);
 }
-
+/* Footer CSS*/
 .footer {
   background-color: white;
   line-height: 20px;
@@ -713,12 +713,14 @@ a:focus, a:active {
  
 }
 
+/* Parallax CSS */
 .parallax .parallax-image.second-image{
   position: absolute;
   right: -200px;
   top: 0;
 }
 
+/* landing Page */
 .landing-page ol{
   font-weight: 300;
 }
@@ -764,6 +766,8 @@ a:focus, a:active {
 .landing-page .social-line {
   border-bottom: 1px solid #dddddd;
 }
+
+/* Custom Carousel CSS */
 .landing-page .carousel-indicators {
   bottom: -50px;
 }
@@ -835,7 +839,7 @@ a:focus, a:active {
   z-index: 2;
 }
 
-
+/* Logo CSS */
 .logo-container .logo{
     overflow: hidden;
     float: left;
@@ -916,6 +920,7 @@ a:focus, a:active {
   right: 0;
 }
 
+/* Color Filter CSS */
 .filter-gradient{
   position: relative;
 }
@@ -1048,6 +1053,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#de8e0009', e
 .landing-page .parallax .description .shop_button{
 	background-color: rgba(255, 255, 255, 0.8);
 	padding: .5em 3em;
+  margin: 10px auto;
 }
 
 .landing-page .section-presentation .description{
